<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Frapptastic</string>
    <string name="mainMenuTitleBar">Main Menu</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="announcements">Announcements</string>
    <string name="announcementsTitleBar">Announcements</string>
    <string name="backToMenu">Back to Main Menu</string>
    <string name="quickEvent">Quick Events</string>
    <string name="quickEventTitleBar">Plan a Quick Event</string>
    <string name="quickEventTitle">Title of Event: </string>
    <string name="quickEventTime">Time of Event: </string>
    <string name="blank" />
    <string name="set">Set</string>
    <string name="quickEventType">Type of Event: </string>
    <string name="quickEventFood">Food</string>
    <string name="quickEventBroHood">Brotherhood</string>
    <string name="quickEventSports">Sports</string>
    <string name="quickEventOther">Other</string>
    <string name="quickEventNotify">Notify Others</string>
    <string name="cancel">Cancel</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="quickEventPreferences">Notification Settings</string>
    <string name="update">Update</string>

    <string-array name="notificationSettings">
        <item>Food</item>
        <item>Brotherhood</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>

    <string name="parseSetupTitleBar">Push Notification Setup</string>
    <string name="parseSignUpMessage">In order to receive push notifications, you\'ll need a Parse account.</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_quick_event_list">Quick Event List</string>
    <string name="title_activity_quick_event_menu">Quick Event Menu</string>
    <string name="makeQuickEvent">Send a Quick Event</string>
    <string name="viewEventList">View Quick Events</string>
    <string name="backToQuickEventMenu">Go Back to Quick Event Menu</string>
    <string name="quickEventDate">Date of Event: </string>
    <string name="title_activity_brother_directory">Brother Directory</string>
    <string name="directory">Directory</string>
    <string name="title_activity_quick_event_responses">Quick Event Responses</string>
    <string name="quickEventRespond">Respond</string>
    <string name="back">Back</string>
    <string name="title_activity_asdfasdfasdfasdf_main">AsdfasdfasdfasdfMainActivity</string>
    <string name="action_settings">Settings</string>

</resources>