<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	style="@style/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickEvent" >

    <TextView
        android:id="@+id/quickEventTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/quickEventTitle"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/quickEventTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickEventTitleLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/quickEventDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quickEventTitleInput"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/quickEventDate"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/quickEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quickEventDateLabel"
        android:layout_alignBottom="@+id/quickEventDateLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/quickEventDateLabel"
        android:text="@string/blank"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quickEventDateSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/quickEventTitleInput"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/set"
        android:onClick="setQuickEventDate" />
    
    <TextView
        android:id="@+id/quickEventTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quickEventDateLabel"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/quickEventTime"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quickEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quickEventTimeLabel"
        android:layout_alignBottom="@+id/quickEventTimeLabel"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/quickEventTimeLabel"
        android:text="@string/blank"
        android:textSize="20sp" />

    <Button
        android:id="@+id/quickEventTimeSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/quickEventDateSet"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/set"
        android:onClick="setQuickEventTime" />

    <TextView
        android:id="@+id/quickEventTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickEventTimeSet"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/quickEventTime"
        android:text="@string/quickEventType"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quickEventTime"
        android:layout_alignTop="@+id/quickEventTypeLabel"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/quickEventFoodRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/quickEventFood" />

        <RadioButton
            android:id="@+id/quickEventBroHoodRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/quickEventBroHood" />

        <RadioButton
            android:id="@+id/quickEventSportsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/quickEventSports" />

        <RadioButton
            android:id="@+id/quickEventOtherRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/quickEventOther" />
    </RadioGroup>

    <Button
        android:id="@+id/quickEventNotifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quickEventCancelButton"
        android:layout_alignBottom="@+id/quickEventCancelButton"
        android:layout_toRightOf="@+id/quickEventCancelButton"
        android:onClick="notifyOthers"
        android:text="@string/quickEventNotify" />

    <Button
        android:id="@+id/quickEventCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/quickEventTitleInput"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="backToQuickEventMenu"
        android:text="@string/back" />

</RelativeLayout>