<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuickEventMenu" >

    <Button
        android:id="@+id/makeQuickEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/makeQuickEvent"
        android:onClick="goToMakeQuickEvent" />

    <Button
        android:id="@+id/viewEventListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makeQuickEventButton"
        android:layout_centerHorizontal="true"
        android:text="@string/viewEventList"
        android:onClick="goToQuickEventsList" />

    <Button
        android:id="@+id/quickEventPreferencesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewEventListButton"
        android:layout_centerHorizontal="true"
        android:text="@string/quickEventPreferences"
        android:onClick="notificationSettings" />

    <Button
        android:id="@+id/backToMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/backToMenu"
        android:onClick="backToMenu" />

</RelativeLayout>