<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/headerlogo"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/announcementsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/announcements"
        android:onClick="showAnnouncements" />

    <Button
        android:id="@+id/quickEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/announcementsButton"
        android:text="@string/quickEvent"
        android:onClick="showQuickEvent" />

    <Button
        android:id="@+id/directoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickEventButton"
        android:layout_centerHorizontal="true"
        android:text="@string/directory"
        android:onClick="showDirectory" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/logOut"
        android:onClick="logOut" />

</RelativeLayout>